Update settings window

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,28 @@
   --color-secondary: #2f4858;
 }
 
+/* scrollbar */
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(136, 136, 136, 0.389);
+  border-radius: 2rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(85, 85, 85, 0.518);
+}
+
 .text-yellow {
   color: var(--color-primary);
 }
