--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,6 @@ body {
   --color-primary-light: #fffccc;
   --color-secondary: #2f4858;
   --color-text: #efefef;
-
-  transition: background-color ease 1s !important;
 }
 
 body.dark-mode {
@@ -16,8 +14,10 @@ body.dark-mode {
 }
 
 header {
-  /* -webkit-user-select: none; */
+  -webkit-user-select: none;
+  user-select: none;
   -webkit-app-region: drag;
+  z-index: 5;
 }
 
 .bg-header {
@@ -59,6 +59,7 @@ body.dark-mode .controls .close:hover {
 .controls .bi {
   color: var(--color-secondary);
   cursor: default;
+  font-size: .9rem;
 }
 
 #options {
